# concentration-tracker

./: README.md  pyproject.toml  requirements.txt
focus_tracker/: .gitignore  __init__.py  __main__.py  _menubar_status.json  activity_monitor.py  alerts.py  analyze_sessions.py  config.py  dashboard.py  eye_tracker.py  focus_engine.py  main.py  menubar_helper.py  model_downloader.py  session_manager.py
focus_tracker/sessions/: session_2026-03-05_15-54-45.json  session_2026-03-06_12-40-54.json  session_2026-03-06_12-49-03.json  session_2026-03-10_09-01-35.json  session_2026-03-10_09-04-04.json  session_2026-03-10_09-07-23.json  session_2026-03-10_09-22-20.json  session_2026-03-10_09-23-40.json  session_2026-03-10_09-29-58.json  session_2026-03-10_09-31-56.json  session_2026-03-10_09-38-01.json  session_2026-03-10_10-35-58.json
tests/: test_core.py  test_reading.py
